--- a/Modulo-01-fundamentos/Codigo/print.ipynb
+++ b/Modulo-01-fundamentos/Codigo/print.ipynb
@@ -29,20 +29,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "bb9d31be",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Este também é outro texto!\n"
+     ]
+    }
+   ],
    "source": [
     "print('Este também é outro texto!') # Este também é outro texto!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "f22b3366",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Patrick\n",
+      "30\n"
+     ]
+    }
+   ],
    "source": [
     "# 2 - print() com variáveis\n",
     "nome = \"Patrick\" # variável string\n",
@@ -54,10 +71,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "1b86bc79",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Olá, meu nome é Patrick e tenho 30 anos.\n"
+     ]
+    }
+   ],
    "source": [
     "# 3 - Combinar texto com variáveis\n",
     "# É preciso converter númeroas para string(texto) utilizando a função srt()\n",
@@ -67,10 +92,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "1a360aa1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Olá, meu nome é Patrick e tenho 30 anos.\n"
+     ]
+    }
+   ],
    "source": [
     "# 4 - Usando vírgulas\n",
     "# Não precisa converter para string\n",
@@ -79,10 +112,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "217f455e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Olá, meu nome é Patrick e tenho 30 anos.\n"
+     ]
+    }
+   ],
    "source": [
     "# 5 - Usando método f-string (Formatação literal de sting) - A partir da versão 3.6 do Python\n",
     "print(f\"Olá, meu nome é {nome} e tenho {idade} anos.\") "
@@ -90,10 +131,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "44dd2934",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Olá, meu nome é Patrick e tenho 30 anos.\n"
+     ]
+    }
+   ],
    "source": [
     "# 6 - Usando método .format()\n",
     "print(\"Olá, meu nome é {} e tenho {} anos.\".format(nome, idade))"
@@ -101,10 +150,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "37225bf5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Item 1 Item 2 Item 3\n"
+     ]
+    }
+   ],
    "source": [
     "# 7 - Separador e finalizador\n",
     "# Sem separador\n",
@@ -113,10 +170,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "8b68a666",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Item 1-Item 2-Item 3\n"
+     ]
+    }
+   ],
    "source": [
     "# Com separador '-'\n",
     "print(\"Item 1\", \"Item 2\", \"Item 3\", sep=\"-\") # Item 1-Item 2-Item 3"
@@ -124,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "507433c2",
    "metadata": {},
    "outputs": [
@@ -146,10 +211,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "36d6dc2d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Item 1-Item 2-Item 3. \n",
+      "Fim da linha.\n"
+     ]
+    }
+   ],
    "source": [
     "# Obs: O Finalizador padrão é o comando de pular linha (\\n) o finalizador end=\".\" diz que quando\n",
     "# terminar a impressão em vez de pular linha será colocado um ponto final logo após o texto\n",
@@ -161,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "7805dde1",
    "metadata": {},
    "outputs": [
@@ -182,10 +256,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "999bbf9b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linha 01 \n",
+      "Linha 02 \n",
+      "Linha 03\n"
+     ]
+    }
+   ],
    "source": [
     "# 8 - Quebra de linha dentro do texto \\n\n",
     "print(\"Linha 01 \\nLinha 02 \\nLinha 03\")\n"
@@ -193,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "514cdcd0",
    "metadata": {},
    "outputs": [
